cornwall changes
- added keys
- added falling block explosions
- started work on abilities